# CPP_Joules

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  installer.bat  installer.ps1  installer.sh
CPP_Joules/: cppJoules.cpp  cppJoules.h  cpp_joules.cpp  cpp_joules.h  energy_state.cpp  energy_state.h  energy_type.cpp  energy_type.h  nvidia_devices.cpp  nvidia_devices.h  rapl_devices.cpp  rapl_devices.h  rapl_exceptions.h
assets/css/: styles.css
assets/js/: main.js
evaluation/: array_concat.cpp  array_concat.cpp_run.csv  array_concat.py_run.csv  bubble_sort.cpp  bubble_sort.cpp_run.csv  bubble_sort.py_run.csv  insertion_sort.cpp_run.csv  insertion_sort.py_run.csv  matrix_mul.cpp  matrix_mul.cpp_run.csv  matrix_mul.py_run.csv  merge_sort.cpp  merge_sort.cpp_run.csv  merge_sort.py_run.csv  nbody.cpp  nbody.cpp_run.csv  nbody.py_run.csv
evaluation/evaluation_results/nbody/: nbody.cpp_run.csv
include/: LangJoulesWrapper.h  MacEnergyLib.h  cppJoules.h  nvidia_devices.h  nvml.h  rapl_devices.h
src/: LangJoulesWrapper.cpp  cppJoules.cpp  cppJoules_exceptions.h  energy_state.cpp  energy_state.h  nvidia_devices.cpp  rapl_devices.cpp
test/: a.csv  fasta.cpp  fasta_win_2500000000  fasta_win_2500000000.csv  mandelbrot.cpp  mandelbrot_win_25000.csv  nbody.cpp  nbody_win_500000000.csv  spectral_win_50000.csv  spectralnorm.cpp  test.cpp  test2.cpp  testcuda.cu
